--- a/.github/prisma-cloud-config.yml
+++ b/.github/prisma-cloud-config.yml
@@ -2,11 +2,7 @@
 # Please update with the respective environment values and commit to master branch under the .github folder before performing scans
 # API url retreived from logging into Prisma Cloud application
 prisma_cloud_api_url: 'https://api.prismacloud.io'
-# --Authentication--
-# Create a new Access Token by navigating to Settings > Access Keys. Copy the credentials below
-#access_token: '3ec5de48-8ecc-4c53-90f8-2abffc840db4'
-access_key: '9c7a45bc-013a-41bb-a433-58b2f2296e50'
-secret_key: 'L2mU16Vk0uvzB+aGuyQw5dzFfFI='
+
 # Define the failure criteria for creating checks. If the criteria matches a check will be created. The template for the checks can be customized in the "/.github/prisma-template-for-scan-results" file.
 failure_criteria_for_creating_checks:
   high: 1
@@ -19,3 +15,11 @@ failure_criteria_for_creating_issues:
   medium: 1
   low: 1
   operator: or
+  
+# Define github asset name
+github_asset_name: "Github Asset Dev"
+
+# Define tags
+tags:
+- phase:testing
+- env:QA
