--- a/.github/prisma-cloud-config.yml
+++ b/.github/prisma-cloud-config.yml
@@ -1,5 +1,7 @@
 # Prisma IaC Scan Config file. 
 # Please update with the respective environment values and commit to master branch under the .github folder before performing scans
+# API url retreived from logging into Prisma Cloud application
+prisma_cloud_api_url: 'https://api3.prismacloud.io'
 
 # Define the failure criteria for creating checks. If the criteria matches a check will be created. The template for the checks can be customized in the "/.github/prisma-template-for-scan-results" file.
 failure_criteria_for_creating_checks:
@@ -7,6 +9,7 @@ failure_criteria_for_creating_checks:
   medium: 1
   low: 1
   operator: or 
+  
 # Define the failure criteria for creating issues. If the criteria matches an issue will be created. The template for issues can be customized in the "/.github/prisma-template-for-scan-results" file.
 failure_criteria_for_creating_issues:
   high: 1
