--- a/.prismaCloud/config.yml
+++ b/.prismaCloud/config.yml
@@ -4,6 +4,7 @@ terraform_012_parameters:
   - root_module: rich-value-types/network/
   - root_module: for-expressions/
   - root_module: datafactory/
+  - root_module: .github/
   
 tags:
   - 'Org: Panw'
