--- a/.github/prisma-cloud-config.yml
+++ b/.github/prisma-cloud-config.yml
@@ -1,18 +1,27 @@
 # Prisma IaC Scan Config file. 
 # Please update with the respective environment values and commit to master branch under the .github folder before performing scans
 
+# API url retreived from logging into Prisma Cloud application
+prisma_cloud_api_url: 'https://api3.prismacloud.io'
+
+# --Authentication--
+# Create a new Access Token by navigating to Settings > Access Keys. Copy the credentials below
+#access_token: '3ec5de48-8ecc-4c53-90f8-2abffc840db4'
+access_key: '962c246c-7c24-4eb6-9271-f153a26fc7ee'
+secret_key: 'nf4fiputYUBioq6KFqZPyBS+RG8='
+
 # Define the failure criteria for creating checks. If the criteria matches a check will be created. The template for the checks can be customized in the "/.github/prisma-template-for-scan-results" file.
 failure_criteria_for_creating_checks:
-  high: 0
-  medium: 0
-  low: 0
+  high: 1
+  medium: 1
+  low: 1
   operator: or 
   
 # Define the failure criteria for creating issues. If the criteria matches an issue will be created. The template for issues can be customized in the "/.github/prisma-template-for-scan-results" file.
 failure_criteria_for_creating_issues:
-  high: 0
-  medium: 0
-  low: 0
+  high: 1
+  medium: 1
+  low: 1
   operator: or
   
 # Define github asset name
