--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ workflows:
   scan:
     jobs:
       - scan_iac:
-          prisma_cloud_api_url: https://api.prismacloud.io
-          access_key: 9c7a45bc-013a-41bb-a433-58b2f2296e50
-          secret_key: PC_SECRET_KEY
+          prisma_cloud_api_url: https://api3.prismacloud.io
+          access_key: 962c246c-7c24-4eb6-9271-f153a26fc7ee
+          secret_key: nf4fiputYUBioq6KFqZPyBS+RG8=
           templates_directory_path: awsdemo
           failure_criteria_high_severity: 1
           failure_criteria_medium_severity: 1
@@ -32,7 +32,7 @@ workflows:
           requires:
             - docker_build_and_save
           prisma_cloud_compute_url: https://us-east1.cloud.twistlock.com/us-1-111573360
-          prisma_cloud_compute_user: 9c7a45bc-013a-41bb-a433-58b2f2296e50
+          prisma_cloud_compute_user: 962c246c-7c24-4eb6-9271-f153a26fc7ee
           prisma_cloud_compute_pass: PC_COMPUTE_PASS
           image: nginx:latest
           image_tar: image.tar
