--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
   scan:
     jobs:
       - scan_iac:
-          prisma_cloud_api_url: https://api3.prismacloud.io
+          prisma_cloud_api_url: https://api3.prismacloud.io/
           access_key: 962c246c-7c24-4eb6-9271-f153a26fc7ee
           secret_key: SECRET_KEY
           templates_directory_path: for-expressions
