--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ workflows:
   scan:
     jobs:
       - scan_iac:
-          prisma_cloud_api_url: https://api3.prismacloud.io/
+          context: prisma_cloud_context
+          prisma_cloud_api_url: https://api3.prismacloud.io
           access_key: 962c246c-7c24-4eb6-9271-f153a26fc7ee
           secret_key: PC_SECRET_KEY
           templates_directory_path: for-expressions
@@ -28,14 +29,7 @@ workflows:
           failure_criteria_low_severity: 1
           failure_criteria_operator: or
       - docker_build_and_save
-      - scan/scan_image:
-          requires:
-            - docker_build_and_save
-          prisma_cloud_compute_url: https://us-east1.cloud.twistlock.com/us-1-111573360
-          prisma_cloud_compute_user: 962c246c-7c24-4eb6-9271-f153a26fc7ee
-          prisma_cloud_compute_pass: PC_COMPUTE_PASS
-          image: nginx:latest
-          image_tar: image.tar
-          vulnerability_threshold: critical
-          compliance_threshold: ''
-          only_fixed: true
+      
+      
+
+          
