--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
           context: prisma_cloud_context
           prisma_cloud_api_url: https://api3.prismacloud.io
           access_key: 962c246c-7c24-4eb6-9271-f153a26fc7ee
-          secret_key: PC_SECRET_KEY
+          secret_key: prisma_cloud_secret_key
           templates_directory_path: for-expressions
           failure_criteria_high_severity: 1
           failure_criteria_medium_severity: 1
